sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:11: error: reassignment to val
      k=k-1
       ^